--- a/package.json
+++ b/package.json
@@ -8,20 +8,36 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
-    "react-background-animation": "^1.0.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
-    "react-lottie": "^1.2.7",
     "react-scripts": "5.0.1",
-    "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-router-dom": "^6.0.0",
+    "styled-components": "^5.3.0",
+    "react-icons": "^4.3.1",
+    "react-toastify": "^9.1.1",
+    "react-spring": "^9.5.0",
+    "axios": "^1.4.0",
+    "react-parallax": "^2.4.0",
+    "framer-motion": "^10.4.0",
+    "react-datepicker": "^4.8.0",
+    "react-lazy-load-image-component": "^1.6.5",
+    "react-responsive": "^9.0.0",
+    "sass": "^1.49.9"
+  },
+  "devDependencies": {
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
+    "vite": "^4.4.5",
+    "@vitejs/plugin-react": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "vite",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "eslintConfig": {
     "extends": [
@@ -40,8 +56,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
