--- a/package.json
+++ b/package.json
@@ -6,30 +6,30 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^10.4.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "react-router-dom": "^6.0.0",
-    "styled-components": "^5.3.0",
-    "react-icons": "^4.3.1",
-    "react-toastify": "^9.1.1",
-    "react-spring": "^9.5.0",
-    "axios": "^1.4.0",
-    "react-parallax": "^2.4.0",
-    "framer-motion": "^10.4.0",
     "react-datepicker": "^4.8.0",
-    "react-lazy-load-image-component": "^1.6.5",
+    "react-dom": "^18.3.1",
+    "react-icons": "^4.3.1",
+    "react-parallax": "^3.5.1",
     "react-responsive": "^9.0.0",
-    "sass": "^1.49.9"
+    "react-router-dom": "^6.0.0",
+    "react-scripts": "5.0.1",
+    "react-spring": "^9.5.0",
+    "react-toastify": "^9.1.1",
+    "sass": "^1.49.9",
+    "styled-components": "^5.3.0",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
-    "vite": "^4.4.5",
-    "@vitejs/plugin-react": "^4.0.3"
+    "vite": "^4.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
